hello card is now fixed on the bottom left of map - no longer covers the center marker. Working on using scrollspy to move between fullscreen sections

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -156,18 +156,15 @@ nav {
 }
 
 
-.hello-card {
-  z-index: 1;
-}
-
-.card {
-  z-index: 2;
-}
-
 
 // ===============================================
 
-#thing {
+// #blood-section {
+//    height: 100vh;
+// }
+
+
+#map-hello {
   height: 100vh;
 }
 
@@ -191,6 +188,11 @@ nav {
   background-color: red;
 }
 
+.hello-card {
+  position: absolute;
+  bottom: 10px;
+  left: 0px;
+}
 
 
 
